--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,6 @@
         "@babel/plugin-proposal-class-properties",
         "@babel/plugin-proposal-object-rest-spread",
         "@babel/plugin-transform-runtime",
-        "@babel/plugin-proposal-decorators"
+        ["@babel/plugin-proposal-decorators", {"decoratorsBeforeExport": true}]
     ]
 }
